force-app/main/default/objects/Integration_Framework_Metadata__mdt/Integration_Framework_Metadata__mdt.object-meta.xml
<CustomObject>
    <description>Integration Framework Metadata</description>
    <label>Integration Framework Metadata</label>
    <pluralLabel>Integration Framework Metadata</pluralLabel>
</CustomObject>