force-app/main/default/objects/Integration_Framework_Metadata__mdt/fields/Addition_Headers__c.field-meta.xml
<CustomField>
    <fullName>Addition_Headers__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <label>Addition Headers ( JSON )</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>