force-app/main/default/objects/Integration_Framework_Metadata__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <defaultValue>&quot;application/json&quot;</defaultValue>
    <label>Content-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>