force-app/main/default/objects/Integration_Framework_Metadata__mdt/fields/Integration_Contract__c.field-meta.xml
<CustomField>
    <fullName>Integration_Contract__c</fullName>
    <label>Integration Contract</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>