force-app/main/default/objects/Integration_Framework_Metadata__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <defaultValue>&quot;POST&quot;</defaultValue>
    <label>Method</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>