force-app/main/default/objects/Integration_Framework_Metadata__mdt/fields/Number_of_Retry__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Retry__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Retries</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>