force-app/main/default/objects/Integration_Framework_Metadata__mdt/fields/Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>Resource_URL__c</fullName>
    <inlineHelpText>Field stores the REST URL portion after the base URL.</inlineHelpText>
    <label>Rest Resource</label>
    <required>true</required>
    <type>Url</type>
</CustomField>